# PasswordManager

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  PasswordManager.cpp  PasswordManager.h  README.md  base.py  build-all.py  build-all.sh  build.bat  build.ps1  build.py  build.sh  clean.ps1  clean.py  clean.sh  conanfile.txt  conf.sh  devcontainer.json  gitmodules.sh  justfile  reset_modules.py  reset_modules.sh  reset_submodules.ps1  reset_submodules.sh  setup.ps1  test.ps1  test.sh  update_modules.py  update_modules.sh  update_submodules.ps1  update_submodules.sh  workflow.sh
.devcontainer/: CLANG-CROSS-COMPILING-WRAPPERS.sh  Dockerfile  GET-NAME-LLVM-MINGW-RELEASE.py  UPDATE-LLVM-MINGW.sh  devcontainer.json  setup-dev-container.sh
.github/workflows/: pull-request.yml
cmake/: ASan.cmake  AddressSanitizer.cmake  BuildOpenSSL.cmake  Ccache.cmake  ClangTidy.cmake  Config.cmake  Coverage.cmake  CppCheck.cmake  Doxygen.cmake  Format.cmake  GetOpenSSL.cmake  Instrumentation.cmake  Memcheck.cmake  OpenSSL.cmake  Packaging.cmake  Platform.cmake  Rust.cmake  Submodules.cmake  TLS.cmake  Testing.cmake  Valgrind.cmake  wxWidgets.cmake
cmake/presets/: Base.json  Compilers.json  CompilersBase.json  CompilersConfig.json  Linux.json  Windows.json
core/: CMakeLists.txt  CMakePresets.json
core/account/: CMakeLists.txt  account_binary.cc  account_index.cc  account_view.cc
core/cmake/: CppCheck.cmake  Format.cmake  RustCrypto.cmake  Testing.cmake
core/core/: CMakeLists.txt
core/core_interface/: CMakeLists.txt
core/crypto/: CMakeLists.txt
core/db/: CMakeLists.txt
core/src/: CMakeLists.txt
core/src/account/: CMakeLists.txt  account_binary.cc  account_index.cc  account_view.cc
core/src/bootstrap/: CMakeLists.txt  bootstrap.cc
core/src/crypto/: CMakeLists.txt  aes_gcm_256.cc  crypto.cc  secure_clear.cc
core/src/cuenta/: CMakeLists.txt
core/src/db/: db.cc
core/src/generador/: CMakeLists.txt  generador.cc
core/src/rust_crypto/: CMakeLists.txt
core/src/types/: account_binary.cc  account_index.cc
core/src/utils/: CMakeLists.txt  set_rand.cc
core/test/: CMakeLists.txt
core/test/account/: CMakeLists.txt
core/test/crypto/: CMakeLists.txt  crypto_test.cc
core/test/cuenta/: CMakeLists.txt  cuenta_test.cc
core/test/datos/: CMakeLists.txt  datos_test.cc
core/test/db/: db_test.cc
core/test/generador/: CMakeLists.txt
core/test/libressl/: CMakeLists.txt
core/test/types/: CMakeLists.txt
core/test/utils/: CMakeLists.txt  set_rand_test.cc
core/test/wx-widgets/: CMakeLists.txt  wx-widgets_test.cc
core/utils/: CMakeLists.txt
crypto/: CMakeLists.txt  Cargo.toml  build.rs
crypto/src/: lib.rs
db/storage/: CMakeLists.txt
include/: Cuenta.h  DB.h  DataBlock.h  Datos.h  Generador.h  Seguridad.h
src/: AES.cpp  CMakeLists.txt  Cuenta.cpp  DB.cpp  DataBlock.cpp  Datos.cpp  Generador.cpp  PasswordManager.cpp  SHA.cpp
src/GestorContra/: CMakeLists.txt  GestorContra.cpp
src/bootstrap/: CMakeLists.txt  bootstrap.cc
src/core/: CMakeLists.txt
src/crypto/: AES.cpp  CMakeLists.txt  Cargo.toml  SHA.cpp  aes_gcm_256.cc  build.rs  secure_clear.cc  sha_256.cc
src/crypto/crypto/: secure_clear.h  sha_256.h
src/crypto/include/crypto/: crypto.h  rust_crypto.h
src/cuenta/: CMakeLists.txt  Cuenta.cpp  Cuenta.h  cuenta.cc  cuenta.hh
src/cuenta/cuenta/: cuenta.h
src/data_block/: CMakeLists.txt  data_block.cc  data_block.cpp  data_block.h  data_block.hh
src/datos/: CMakeLists.txt  Datos.cpp  Datos.h  datos.cc  datos.hh
src/db/: CMakeLists.txt  DB.cpp  DB.h  db.cc  db.hh
src/db/db/: db.h
src/db/include/db/: db.h  storage.h
src/db/src/: db.cc
src/generador/: CMakeLists.txt  generador.cc  generador.cpp  generador.h  generador.hh
src/gestor_contra/: CMakeLists.txt  gestor_contra.cc
src/gestor_contra/gestor_contra/: gestor_contra.h
src/libressl_adapter/: CMakeLists.txt  aes.cc  sha.cc
src/libressl_adapter/libressl_adapter/: libressl_adapter.h
src/openssl_adapter/: CMakeLists.txt  aes.cc  openssl_.hh  openssl_adapter.hh  sha.cc
src/openssl_lib/: CMakeLists.txt
src/rust_crypto/: build.rs
src/security/: CMakeLists.txt  security.cc
src/security/security/: security.h
src/seguridad/: CMakeLists.txt  aes.cc  seguridad.cc  seguridad.h  seguridad.hh  sha.cc
src/seguridad/openssl/: CMakeLists.txt  aes.cc  openssl.hh  openssl_.hh  sha.cc
src/types/: CMakeLists.txt  account.cc  account_binary.cc  account_buffer.cc  account_index.cc  cuenta.cc  cuenta_arch.cc  ind_cuenta.cc
src/types/include/types/: account_binary.h  account_index.h  account_size.h  account_view.h
src/types/src/: account_binary.cc  account_index.cc  account_view.cc
src/types/types/: account.h  account_binary.h  account_buffer.h  account_index.h  cuenta.h  cuenta_arch.h  ind_cuenta.h
src/utils/: CMakeLists.txt  set_rand.cc  set_rand.hh
test/: CMakeLists.txt
test/cuenta/: CMakeLists.txt  cuenta.cc  cuenta_test.cc
test/data_block/: CMakeLists.txt  data_block.cc  data_block_test.cc
test/datos/: CMakeLists.txt  datos_test.cc
test/db/: CMakeLists.txt  db.cc  db_test.cc
test/generador/: CMakeLists.txt  generador_test.cc
test/gestor_contra/: CMakeLists.txt  gestor_contra_test.cc
test/libressl/: libressl_test.cc
test/libressl_adapter/: CMakeLists.txt  libressl_adapter_test.cc
test/openssl/: CMakeLists.txt  openssl_test.cc
test/openssl_adapter/: CMakeLists.txt  openssl_adapter_test.cc
test/seguridad/: CMakeLists.txt  seguridad_test.cc
test/types/: CMakeLists.txt  account_test.cc
test/utils/: CMakeLists.txt  set_rand_test.cc
test/wx-widgets/: CMakeLists.txt
tests/: CMakeLists.txt  PasswordManagerTests.cpp  TestDB.cpp  TestGenerador.cpp  TestSeguridad.cpp
tests/core/: CMakeLists.txt
tests/core/account/: CMakeLists.txt  account_binary_test.cc  account_index_test.cc  account_view_test.cc
tests/crypto/: CMakeLists.txt
tests/db/: CMakeLists.txt  storage_test.cc
tests/types/: CMakeLists.txt  account_binary_test.cc  account_index_test.cc  account_view_test.cc
(+26 files in other folders)
