include(CppCheck)
include(Doxygen)

add_subdirectory(bootstrap)
add_subdirectory(cuenta)
add_subdirectory(data_block)
add_subdirectory(datos)
add_subdirectory(db)
add_subdirectory(generador)
add_subdirectory(gestor_contra)
add_subdirectory(openssl_adapter)
add_subdirectory(seguridad)
add_subdirectory(utils)

Doxygen(src docs)