include(CppCheck)
include(ClangTidy)
include(Doxygen)

add_subdirectory(bootstrap)
add_subdirectory(cuenta)
add_subdirectory(data_block)
add_subdirectory(datos)
add_subdirectory(db)
add_subdirectory(generador)
add_subdirectory(gestor_contra)
add_subdirectory(security)
add_subdirectory(tls_adapter)
add_subdirectory(types)
add_subdirectory(utils)

Doxygen(src docs)