include(Platform)
require_linux_x64(GoogleTest)

include(Testing)

add_subdirectory(cuenta)
add_subdirectory(data_block)
add_subdirectory(datos)
add_subdirectory(db)
add_subdirectory(generador)
add_subdirectory(gestor_contra)
add_subdirectory(libressl)
add_subdirectory(libressl_adapter)
add_subdirectory(seguridad)
add_subdirectory(types)
add_subdirectory(utils)
add_subdirectory(wx-widgets)